refactor: remove tag selectors according to rule 3.4 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.page {
     background-color: #f8f8f8;
     color: #333;
     font-family: Lato, sans-serif;
@@ -10,10 +10,10 @@ body {
     display: block;
     text-align: right;
 }
-.header img {
+.header-image {
     width: 100%;
 }
-.header .more-inf {
+.header .more-info {
     font-family: fantasy, cursive;
 }
 
@@ -44,7 +44,7 @@ li, h3 {
 input,button{
     outline:none;
 }
-button {
+.button {
     background: none;
     border: 0px;
     color: #888;
@@ -53,12 +53,11 @@ button {
     font-family: Lato, sans-serif;
     cursor: pointer;
 }
-button:hover {
+.button:hover {
     color: #3a3A3a;
 }
 /* Heading */
-h3,
-label[for='new-task'] {
+.tasks-title {
     color: #333;
     font-weight: 700;
     font-size: 15px;
@@ -67,7 +66,7 @@ label[for='new-task'] {
     margin: 0;
     text-transform: uppercase;
 }
-input[type="text"] {
+.task-input {
     margin: 0;
     font-size: 18px;
     line-height: 18px;
@@ -79,21 +78,21 @@ input[type="text"] {
     font-family: Lato, sans-serif;
     color: #888;
 }
-input[type="text"]:focus {
+.task-input:focus {
     color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.new-task__label {
     display: block;
     margin: 0 0 20px;
 }
-input#new-task {
+#new-task {
     width: 318px;
 }
 
 /* Task list */
-li {
+.task-item {
     overflow: hidden;
     padding: 20px 0;
     border-bottom: 1px solid #eee;
@@ -102,28 +101,28 @@ li {
     justify-content: space-between;
     align-items: center;
 }
-li > * {
+.task-item > * {
     vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.task-item__checkbox {
     margin: 0 10px;
 }
-li > label {
+.task-item__label {
     padding-left: 10px;
     box-sizing: border-box;
     font-size: 18px;
     width: 226px;
 }
-li >    input[type="text"] {
+.task-item__input {
     width: 226px
 }
-button.delete img {
+.button.delete img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.button.delete img:hover {
     transform: rotateZ(0);
 }
 
