--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 
 .new-task-input {
@@ -133,7 +133,7 @@ input,button{
 }
 
 .task-item__input {
-  width: 226px
+  width: 226px;
 }
 
 .button.delete img {
@@ -148,18 +148,18 @@ input,button{
 
 /* Completed */
 ul#completed-tasks label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 ul li input[type=text] {
-  display: none
+  display: none;
 }
 
 ul li.edit-mode input[type=text] {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 ul li.edit-mode label {
